<resources>
    <string name="app_name">Torchlight</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Common -->
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="watch">Watch</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="home">홈</string>
    <string name="notification">알림</string>
    <string name="my_page">마이페이지</string>
    <string name="next_to">다음으로</string>
    <string name="make_project">프로젝트 만들기</string>
    <string name="project_area">프로젝트 지역</string>
    <string name="passion">열정</string>
    <string name="scale">규모</string>
    <string name="start_expected">시작 예정</string>

    <!-- Home -->
    <string name="home_search_interested_project">관심있는 프로젝트를 검색해보세요</string>
    <string name="order_by_recent">최신순</string>
    <string name="order_by_platform">플랫폼</string>
    <string name="required_member">%d / %d 모집중</string>

    <!-- My Project -->
    <string name="my_project">내 프로젝트</string>
    <string name="my_project_made">만든 프로젝트</string>
    <string name="my_project_participating">참여 프로젝트</string>
    <string name="my_project_liked">찜한 프로젝트</string>

    <!-- Notifications -->
    <string name="notifications_empty_title">torchlight</string>
    <string name="notifications_empty_description">아직 알림이\n없네요.</string>

    <!-- Start -->
    <string name="start_title">For you\nwho want to build up\n<b>a project that makes heart-beats</b>.</string>
    <string name="start_demo">Look around without register</string>
    <string name="start_register">Register with your e-mail address</string>
    <string name="start_already_member_q">Do you already have an account?</string>

    <!-- Sign Up -->
    <string name="signup_email">Email address</string>
    <string name="signup_check_duplicated">Check duplicated</string>
    <string name="signup_already_used_email">This email is already signed up</string>
    <string name="signup_send_auth_code">Send auth code</string>
    <string name="signup_auto_code">Auto code</string>
    <string name="signup_send_again">Send code again</string>
    <string name="signup_name">Name</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_confirm">Password confirm</string>
    <string name="signup_agree_disclaimer">Agree disclaimer</string>
    <string name="signup_im_agree_disclaimer_msg">Check here to agree terms&amp;condition and private policy.</string>
    <string name="signup_register">Register</string>
    <string name="signup_register_done">Register successfully</string>
    <string name="signup_email_is_invalid">Email address is not valid.</string>

    <!-- Sign In -->
    <string name="signin_find_pw">Find password</string>
    <string name="signin_signin">Sign in</string>
    <string name="signin_email_is_invalid">Email address is not valid.</string>
    <string name="signin_please_fill_all">Please fill both email and password.</string>
    <string name="signin_account_info_wrong">Fail to sign in: Email or password is wrong.</string>

    <!-- Profile -->
    <string name="profile_mandatory">Mandatory profile</string>
    <string name="profile_job">Job</string>
    <string name="profile_occupation">Occupation</string>
    <string name="profile_skills">Skills</string>
    <string name="profile_detail">Detail</string>
    <string name="profile_input">Input</string>
    <string name="profile_optional">Optional profile</string>
    <string name="profile_you_can_skip_by_clicking_nxt_btn">You can skip this by touching next button below the screen.</string>
    <string name="profile_interests">Interests</string>
    <string name="profile_passion">Passion</string>
    <string name="profile_selected_category">Selected Category</string>
    <string name="profile_whole_category">Whole category</string>
    <string name="profile_url">URL</string>
    <string name="profile_grd1">Grade 1</string>
    <string name="profile_grd2">Grade 2</string>
    <string name="profile_grd3">Grade 3</string>
    <string name="profile_create_profile">Create profile</string>

    <!-- Project -->
    <string name="project_platform" cdata="true"><![CDATA[Mobile &amp; Web]]></string>
    <string name="project_desktop">Desktop</string>
    <string name="project_field">Field</string>
    <string name="project_name">프로젝트 제목</string>
    <string name="project_detail_content">상세 내용</string>
    <string name="project_quest_contact">문의하기 연락처</string>
    <string name="project_sample_content">한 줄 설명</string>
    <string name="project_all_member">총 인원 %d명</string>
    <string name="project_joined_and_required_member">%d/%d명</string>
    <string name="project_member_person">%d명</string>


</resources>
