<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mashup.torchlight.ui.home.HomeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            style="@style/DefaultAppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- top bar -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/global_top_bar_hight"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="21dp"
                            android:src="@drawable/ic_logo" />

                    </LinearLayout>

                    <!-- view pager -->
                    <!--androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vp_home_top_banner"
                        android:layout_width="match_parent"
                        android:layout_height="209dp" /-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="209dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/bg_home_banner"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            style="@style/SmallSingleLine"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="추천 프로젝트" />

                        <TextView
                            style="@style/TitleMultiLine"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:lineSpacingExtra="2dp"
                            android:text="Study Waston\n스터디 관리 웹애플리케이" />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <!-- fixing bar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/create_project_start_margin"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/create_project_start_margin"
                android:orientation="vertical">

                <!-- search -->
                <RelativeLayout
                    android:id="@+id/btnFragmentHomeSearch"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/item_card_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/create_project_start_margin"
                    android:paddingEnd="@dimen/create_project_start_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_search_interested_project"
                        android:textColor="@color/text_secondary"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_search" />

                </RelativeLayout>

                <!-- filter -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/btn_home_order_by_recent"
                        android:layout_width="82dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/SmallSingleLine"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_by_recent" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_toggle" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_home_order_by_platform"
                        android:layout_width="82dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/SmallSingleLine"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_by_platform" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_toggle" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/create_project_start_margin"
            android:layout_marginEnd="@dimen/create_project_start_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:itemCount="3"
            tools:listitem="@layout/item_project" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.isLoading()}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>